Update modules to use maven artifacts so we don't need to reprovision if they are rebuilt.

--- a/direct/pom.xml
+++ b/direct/pom.xml
@@ -107,6 +107,7 @@
                         <layer>grpc</layer>
                     </layers>
                     <galleon-options>
+                        <jboss-maven-dist/>
                         <jboss-fork-embedded>${galleon.fork.embedded}</jboss-fork-embedded>
                     </galleon-options>
                     <log-provisioning-time>${galleon.log.time}</log-provisioning-time>
